--- a/style.css
+++ b/style.css
@@ -17,17 +17,13 @@ body {
 }
 
 .intro {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: opacity 1s ease;
-  z-index: 2;
+  width: 100vw;
+  height: 100vh;
+  background: black;
+  z-index: 10;
 }
 
 .fade-out {
