--- a/style.css
+++ b/style.css
@@ -90,9 +90,9 @@ body {
 }
 
 @keyframes espelho {
-  0% { background-image: url('img1.jpg'); }
-  20% { background-image: url('img2.jpg'); }
-  40% { background-image: url('img3.jpg'); }
+  0% { background-image: url('img1.heic'); }
+  20% { background-image: url('img2.heic'); }
+  40% { background-image: url('img3.heic'); }
   60% { background-image: url('img4.jpg'); }
   80% { background-image: url('img5.jpg'); }
   100% { background-image: url('img1.jpg'); }
