--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('img1.jpg') center/cover no-repeat;
+  background: url('img1.heic') center/cover no-repeat;
   animation: espelho 20s infinite;
   filter: blur(10px) brightness(0.3);
   z-index: -1;
