--- a/style.css
+++ b/style.css
@@ -17,14 +17,15 @@ body {
 }
 
 .intro {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: black;
-  z-index: 10;
+  position: fixed; top:0; left:0;
+  width:100vw; height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:black;
+  z-index: 999;
 }
+
 
 .fade-out {
   opacity: 0;
@@ -90,8 +91,8 @@ body {
 }
 
 @keyframes espelho {
-  0% { background-image: url('img1.heic'); }
-  20% { background-image: url('img2.heic'); }
+  0% { background-image: url('img/img1.heic'); }
+  20% { background-image: url('img/img2.heic'); }
   40% { background-image: url('img3.heic'); }
   60% { background-image: url('img2.jpg'); }
   80% { background-image: url('img3.jpg'); }
