--- a/style.css
+++ b/style.css
@@ -28,14 +28,20 @@ body {
 
 
 .fade-out {
+  transform: translate(-50%, -50%) scale(6);
   opacity: 0;
 }
 
 .selo-container {
-  position: absolute;
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
+  transition: transform 1s ease;
   cursor: pointer;
+  z-index: 5;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1); /* escalar centralizado */
 }
 
 #selo {
