--- a/style.css
+++ b/style.css
@@ -7,23 +7,22 @@
 }
 
 body {
-  font-family: 'Playfair Display', serif;
-  background-color: #000;
-  color: #fff;
-  text-align: center;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  background-color: #0d0d0d;
+  color: #f5f5f5;
   overflow: hidden;
-  min-height: 100vh;
-  position: relative;
-}
 
 .intro {
-  position: fixed; top:0; left:0;
-  width:100vw; height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background:black;
-  z-index: 999;
+  width: 100vw;
+  height: 100vh;
+  background: url('fundo-desenfocado.jpg') no-repeat center center/cover;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 
@@ -45,8 +44,15 @@ body {
 }
 
 #selo {
-  width: 100%;
-  animation: pulse 2s infinite;
+  width: 100px;
+  height: 100px;
+  transition: transform 1s ease, opacity 1s ease;
+  cursor: pointer;
+  z-index: 5;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
 }
 
 .iniciais {
