--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   background-color: #0d0d0d;
   color: #f5f5f5;
   overflow: hidden;
+}
 
 .intro {
   width: 100vw;
@@ -23,8 +24,8 @@ body {
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  z-index: 0;
 }
-
 
 .fade-out {
   transform: translate(-50%, -50%) scale(6);
@@ -40,7 +41,7 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%) scale(1); /* escalar centralizado */
+  transform: translate(-50%, -50%) scale(1);
 }
 
 #selo {
@@ -87,7 +88,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('img1.heic') center/cover no-repeat;
+  background: url('img/img1.heic') center/cover no-repeat;
   animation: espelho 20s infinite;
   filter: blur(10px) brightness(0.3);
   z-index: -1;
@@ -103,12 +104,12 @@ body {
 }
 
 @keyframes espelho {
-  0% { background-image: url('img/img1.heic'); }
-  20% { background-image: url('img/img2.heic'); }
-  40% { background-image: url('img3.heic'); }
-  60% { background-image: url('img2.jpg'); }
-  80% { background-image: url('img3.jpg'); }
-  100% { background-image: url('img1.heic'); }
+  0%   { background-image: url('img/img1.heic'); }
+  20%  { background-image: url('img/img2.heic'); }
+  40%  { background-image: url('img/img3.heic'); }
+  60%  { background-image: url('img/img2.jpg'); }
+  80%  { background-image: url('img/img3.jpg'); }
+  100% { background-image: url('img/img1.heic'); }
 }
 
 main {
