--- a/style.css
+++ b/style.css
@@ -37,23 +37,22 @@ body {
   height: 100px;
   transition: transform 1s ease;
   cursor: pointer;
-  z-index: 5;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%) scale(1);
+  z-index: 10;
 }
 
 #selo {
   width: 100px;
   height: 100px;
   transition: transform 1s ease, opacity 1s ease;
-  cursor: pointer;
-  z-index: 5;
+  transform: translate(-50%, -50%) scale(1);
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  z-index: 8;
 }
 
 .iniciais {
@@ -61,9 +60,11 @@ body {
   font-size: 2.5rem;
   color: white;
   position: absolute;
-  top: 35%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 11; /* acima do selo */
+  pointer-events: none;
 }
 
 .oculto {
