--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  z-index: 0;
 }
 
 .fade-out {
@@ -48,10 +47,10 @@ body {
   width: 100px;
   height: 100px;
   transition: transform 1s ease, opacity 1s ease;
-  transform: translate(-50%, -50%) scale(1);
   position: absolute;
   left: 50%;
   top: 50%;
+  transform: translate(-50%, -50%) scale(1);
   z-index: 8;
 }
 
@@ -63,7 +62,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 11; /* acima do selo */
+  z-index: 11;
   pointer-events: none;
 }
 
@@ -89,7 +88,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('img/img1.heic') center/cover no-repeat;
+  background: url('img1.heic') center/cover no-repeat;
   animation: espelho 20s infinite;
   filter: blur(10px) brightness(0.3);
   z-index: -1;
@@ -105,11 +104,11 @@ body {
 }
 
 @keyframes espelho {
-  0%   { background-image: url('img/img1.heic'); }
-  20%  { background-image: url('img/img2.heic'); }
-  40%  { background-image: url('img/img3.heic'); }
-  60%  { background-image: url('img/img2.jpg'); }
-  80%  { background-image: url('img/img3.jpg'); }
+  0% { background-image: url('img/img1.heic'); }
+  20% { background-image: url('img/img2.heic'); }
+  40% { background-image: url('img/img3.heic'); }
+  60% { background-image: url('img/img2.jpg'); }
+  80% { background-image: url('img/img3.jpg'); }
   100% { background-image: url('img/img1.heic'); }
 }
 
