--- a/style.css
+++ b/style.css
@@ -32,14 +32,13 @@ body {
 }
 
 .selo-container {
-  width: 100px;
-  height: 100px;
-  transition: transform 1s ease;
-  cursor: pointer;
   position: absolute;
   left: 50%;
   top: 50%;
+  width: 100px;
+  height: 100px;
   transform: translate(-50%, -50%) scale(1);
+  transition: transform 1s ease;
   z-index: 10;
 }
 
@@ -47,11 +46,16 @@ body {
   width: 100px;
   height: 100px;
   transition: transform 1s ease, opacity 1s ease;
+  transform: translate(-50%, -50%) scale(1);
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%) scale(1);
   z-index: 8;
+}
+
+#selo.fade-out {
+  transform: translate(-50%, -50%) scale(6);
+  opacity: 0;
 }
 
 .iniciais {
