--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
 .intro {
   width: 100vw;
   height: 100vh;
-  background: url('fundo-desenfocado.jpg') no-repeat center center/cover;
   position: relative;
   display: flex;
   justify-content: center;
@@ -35,21 +34,21 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  width: 100px;
-  height: 100px;
-  transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) scale(6); /* Aumentado para 600% */
   transition: transform 1s ease;
   z-index: 10;
+  width: 100px;
+  height: 100px;
 }
 
 #selo {
   width: 100px;
   height: 100px;
-  transition: transform 1s ease, opacity 1s ease;
-  transform: translate(-50%, -50%) scale(1);
   position: absolute;
   left: 50%;
   top: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 1s ease, opacity 1s ease;
   z-index: 8;
 }
 
@@ -92,7 +91,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('img1.heic') center/cover no-repeat;
+  background: url('img/img1.heic') center/cover no-repeat;
   animation: espelho 20s infinite;
   filter: blur(10px) brightness(0.3);
   z-index: -1;
@@ -155,6 +154,10 @@ p {
 }
 
 footer {
+  margin-top: 3rem;
+  font-size: 0.9rem;
+  opacity: 0.7;
+}
   margin-top: 3rem;
   font-size: 0.9rem;
   opacity: 0.7;
