--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Playfair Display', serif;
   background-color: #0d0d0d;
   color: #f5f5f5;
   overflow: hidden;
