--- a/style.css
+++ b/style.css
@@ -13,17 +13,18 @@ body {
   background-color: #0d0d0d;
   color: #f5f5f5;
   overflow: hidden;
+  height: 100vh;
+  width: 100vw;
 }
 
 .intro {
   width: 100vw;
   height: 100vh;
+  background-color: #0d0d0d;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
-  background-color: #0d0d0d; /* fundo liso escuro enquanto o selo aparece */
 }
 
 .fade-out {
@@ -35,21 +36,20 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%) scale(6); /* Aumentado para 600% */
-  transition: transform 1s ease;
-  z-index: 10;
   width: 100px;
   height: 100px;
+  transform: translate(-50%, -50%);
+  z-index: 10;
 }
 
 #selo {
   width: 100px;
   height: 100px;
+  transition: transform 1s ease, opacity 1s ease;
+  transform: translate(-50%, -50%) scale(1);
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  transition: transform 1s ease, opacity 1s ease;
   z-index: 8;
 }
 
@@ -66,8 +66,13 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 11;
+  z-index: 9;
   pointer-events: none;
+  transition: opacity 1s ease;
+}
+
+.iniciais.fade-out {
+  opacity: 0;
 }
 
 .oculto {
@@ -92,35 +97,29 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('img/img1.heic') center/cover no-repeat;
   animation: espelho 20s infinite;
+  background-size: cover;
+  background-position: center;
   filter: blur(10px) brightness(0.3);
   z-index: -1;
-}
-
-@keyframes pulse {
-  0%, 100% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.1);
-  }
 }
 
 @keyframes espelho {
   0% { background-image: url('img/img1.heic'); }
   20% { background-image: url('img/img2.heic'); }
   40% { background-image: url('img/img3.heic'); }
-  60% { background-image: url('img/img4.heic'); }
-  80% { background-image: url('img/img5.heic'); }
-  100% { background-image: url('img/img6.heic'); }
-  80% { background-image: url('img/img7.heic'); }
-  60% { background-image: url('img/img8.heic'); }
-  40% { background-image: url('img/img9.heic'); }
-  20% { background-image: url('img/img10.heic'); }
+  60% { background-image: url('img/img2.jpg'); }
+  80% { background-image: url('img/img3.jpg'); }
+  100% { background-image: url('img/img1.heic'); }
 }
 
-main {
+.conteudo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  text-align: center;
   padding: 2rem;
   z-index: 1;
 }
@@ -159,10 +158,6 @@ p {
 }
 
 footer {
-  margin-top: 3rem;
-  font-size: 0.9rem;
-  opacity: 0.7;
-}
   margin-top: 3rem;
   font-size: 0.9rem;
   opacity: 0.7;
