--- a/style.css
+++ b/style.css
@@ -7,66 +7,49 @@
 }
 
 body {
-  margin: 0;
-  padding: 0;
   font-family: 'Playfair Display', serif;
   background-color: #0d0d0d;
-  color: #f5f5f5;
+  color: #fff;
   overflow: hidden;
   height: 100vh;
-  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .intro {
+  position: absolute;
   width: 100vw;
   height: 100vh;
   background-color: #0d0d0d;
-  position: relative;
   display: flex;
-  justify-content: center;
   align-items: center;
-}
-
-.fade-out {
-  transform: translate(-50%, -50%) scale(6);
-  opacity: 0;
+  justify-content: center;
 }
 
 .selo-container {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 100px;
-  height: 100px;
-  transform: translate(-50%, -50%);
-  z-index: 10;
+  position: relative;
+  z-index: 2;
 }
 
 #selo {
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
+  cursor: pointer;
   transition: transform 1s ease, opacity 1s ease;
-  transform: translate(-50%, -50%) scale(1);
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  z-index: 8;
 }
 
 #selo.fade-out {
-  transform: translate(-50%, -50%) scale(6);
+  transform: scale(6);
   opacity: 0;
 }
 
 .iniciais {
-  font-family: 'Great Vibes', cursive;
-  font-size: 2.5rem;
-  color: white;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 9;
+  font-family: 'Great Vibes', cursive;
+  font-size: 3rem;
+  color: white;
+  z-index: 1;
   pointer-events: none;
   transition: opacity 1s ease;
 }
@@ -75,53 +58,17 @@ body {
   opacity: 0;
 }
 
-.oculto {
-  display: none;
-}
-
-.fundo-espelho::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: black;
-  z-index: -2;
-}
-
-.fundo-espelho::after {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  animation: espelho 20s infinite;
-  background-size: cover;
-  background-position: center;
-  filter: blur(10px) brightness(0.3);
-  z-index: -1;
-}
-
-@keyframes espelho {
-  0% { background-image: url('img/img1.heic'); }
-  20% { background-image: url('img/img2.heic'); }
-  40% { background-image: url('img/img3.heic'); }
-  60% { background-image: url('img/img2.jpg'); }
-  80% { background-image: url('img/img3.jpg'); }
-  100% { background-image: url('img/img1.heic'); }
-}
-
 .conteudo {
+  text-align: center;
+  padding: 2rem;
+  max-width: 600px;
+  z-index: 1;
+}
+
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
-  text-align: center;
-  padding: 2rem;
-  z-index: 1;
 }
 
 h1 {
@@ -138,9 +85,9 @@ p {
 
 .botoes {
   display: flex;
-  justify-content: center;
   gap: 1rem;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .botao {
@@ -161,4 +108,30 @@ footer {
   margin-top: 3rem;
   font-size: 0.9rem;
   opacity: 0.7;
+}
+
+.oculto {
+  display: none;
+}
+
+/* Fundo animado */
+body.fundo-espelho::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  animation: espelho 20s infinite;
+  background-size: cover;
+  background-position: center;
+  filter: blur(10px) brightness(0.3);
+  z-index: -1;
+}
+
+@keyframes espelho {
+  0% { background-image: url('img/img1.jpg'); }
+  33% { background-image: url('img/img2.jpg'); }
+  66% { background-image: url('img/img3.jpg'); }
+  100% { background-image: url('img/img1.jpg'); }
 }
