--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display&family=Roboto&display=swap');
 
 * {
   margin: 0;
@@ -7,36 +7,39 @@
 }
 
 body {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
   background-color: #0d0d0d;
-  color: #fff;
+  color: #f5f5f5;
   overflow: hidden;
   height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 100vw;
 }
 
 .intro {
-  position: absolute;
   width: 100vw;
   height: 100vh;
-  background-color: #0d0d0d;
+  background: black; /* Substitua se tiver uma imagem específica */
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
 }
 
 .selo-container {
   position: relative;
-  z-index: 2;
+  width: 100px;
+  height: 100px;
+  z-index: 10;
+  cursor: pointer;
 }
 
 #selo {
-  width: 120px;
-  height: 120px;
-  cursor: pointer;
+  width: 100px;
+  height: 100px;
   transition: transform 1s ease, opacity 1s ease;
+  position: relative;
+  z-index: 8;
 }
 
 #selo.fade-out {
@@ -45,49 +48,71 @@ body {
 }
 
 .iniciais {
-  position: absolute;
   font-family: 'Great Vibes', cursive;
-  font-size: 3rem;
+  font-size: 2.5rem;
   color: white;
-  z-index: 1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9;
   pointer-events: none;
-  transition: opacity 1s ease;
 }
 
-.iniciais.fade-out {
-  opacity: 0;
+.oculto {
+  display: none;
 }
 
+/* Fundo com imagens e efeito de blur */
+.fundo-espelho::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('img/img1.heic') center/cover no-repeat;
+  animation: espelho 20s infinite;
+  filter: blur(10px) brightness(0.3);
+  z-index: -1;
+}
+
+@keyframes espelho {
+  0% { background-image: url('img/img1.heic'); }
+  25% { background-image: url('img/img2.heic'); }
+  50% { background-image: url('img/img3.heic'); }
+  75% { background-image: url('img/img2.jpg'); }
+  100% { background-image: url('img/img1.heic'); }
+}
+
+/* Conteúdo principal */
 .conteudo {
-  text-align: center;
-  padding: 2rem;
-  max-width: 600px;
-  z-index: 1;
-}
-
-main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  height: 100vh;
+  text-align: center;
+  padding: 2rem;
 }
 
-h1 {
+main h1 {
   font-family: 'Great Vibes', cursive;
   font-size: 3rem;
   color: #d0aaff;
   margin-bottom: 1rem;
 }
 
-p {
+main p {
   font-size: 1.2rem;
   margin-bottom: 2rem;
 }
 
 .botoes {
   display: flex;
+  justify-content: center;
   gap: 1rem;
   flex-wrap: wrap;
-  justify-content: center;
 }
 
 .botao {
@@ -105,33 +130,7 @@ p {
 }
 
 footer {
-  margin-top: 3rem;
+  margin-top: 2rem;
   font-size: 0.9rem;
   opacity: 0.7;
-}
-
-.oculto {
-  display: none;
-}
-
-/* Fundo animado */
-body.fundo-espelho::after {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  animation: espelho 20s infinite;
-  background-size: cover;
-  background-position: center;
-  filter: blur(10px) brightness(0.3);
-  z-index: -1;
-}
-
-@keyframes espelho {
-  0% { background-image: url('img/img1.jpg'); }
-  33% { background-image: url('img/img2.jpg'); }
-  66% { background-image: url('img/img3.jpg'); }
-  100% { background-image: url('img/img1.jpg'); }
 }
