--- a/style.css
+++ b/style.css
@@ -28,17 +28,19 @@ body {
 
 .selo-container {
   position: relative;
-  width: 100px;
-  height: 100px;
+  width: 150px; /* Aumenta o tamanho */
+  height: 150px;
   z-index: 10;
   cursor: pointer;
 }
 
 #selo {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   transition: transform 1s ease, opacity 1s ease;
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   z-index: 8;
 }
 
@@ -49,13 +51,13 @@ body {
 
 .iniciais {
   font-family: 'Great Vibes', cursive;
-  font-size: 2.5rem;
+  font-size: 3rem;
   color: white;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 9;
+  z-index: 9; /* Fica acima do selo */
   pointer-events: none;
 }
 
