--- a/style.css
+++ b/style.css
@@ -28,20 +28,19 @@ body {
 
 .selo-container {
   position: relative;
-  width: 150px; /* Aumenta o tamanho */
-  height: 150px;
-  z-index: 10;
-  cursor: pointer;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto; /* centraliza horizontalmente */
+  z-index: 2;
 }
 
 #selo {
   width: 100%;
   height: 100%;
+  display: block;
   transition: transform 1s ease, opacity 1s ease;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 8;
+  z-index: 1;
+  position: relative;
 }
 
 #selo.fade-out {
@@ -57,7 +56,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 9; /* Fica acima do selo */
+  z-index: 3;
   pointer-events: none;
 }
 
