--- a/style.css
+++ b/style.css
@@ -26,39 +26,35 @@ body {
   overflow: hidden;
 }
 
-.selo-container {
-  width: 350px;
-  height: 350px;
-  position: relative;
-  z-index: 10;
+.faixa {
+  width: 100vw;
+  height: 120px;
+  background-color: #ffd700;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-#selo {
-  width: 100%;
-  height: auto;
-  display: block;
+  position: relative;
+  z-index: 10;
   transition: transform 1s ease, opacity 1s ease;
-  z-index: 8;
-}
-
-#selo.fade-out {
-  transform: scale(6);
-  opacity: 0;
 }
 
 .iniciais {
   font-family: 'Great Vibes', cursive;
   font-size: 4rem;
-  color: white;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  color: #0d0d0d;
   z-index: 11;
-  pointer-events: none;
+  cursor: pointer;
+  transition: transform 1s ease, opacity 1s ease;
+}
+
+.iniciais.fade-out {
+  transform: scale(6);
+  opacity: 0;
+}
+
+.faixa.fade-out {
+  transform: scaleY(6);
+  opacity: 0;
 }
 
 .oculto {
