--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 .intro {
   width: 100vw;
   height: 100vh;
-  background: url('background.jpg') center/cover no-repeat; /* Substitua se tiver uma imagem específica */
+  background: url('background.jpg'); /* Substitua se tiver uma imagem específica */
   display: flex;
   justify-content: center;
   align-items: center;
