--- a/style.css
+++ b/style.css
@@ -69,18 +69,23 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('img/img1.heic') center/cover no-repeat;
+  background: url('img/img1.png') center/cover no-repeat;
   animation: espelho 20s infinite;
   filter: blur(10px) brightness(0.3);
   z-index: -1;
 }
 
 @keyframes espelho {
-  0% { background-image: url('img/img1.heic'); }
-  25% { background-image: url('img/img2.heic'); }
-  50% { background-image: url('img/img3.heic'); }
-  75% { background-image: url('img/img2.jpg'); }
-  100% { background-image: url('img/img1.heic'); }
+  0% { background-image: url('img/img1.png'); }
+  25% { background-image: url('img/img2.png'); }
+  50% { background-image: url('img/img3.png'); }
+  75% { background-image: url('img/img4.png'); }
+  100% { background-image: url('img/img5.png'); }
+  0% { background-image: url('img/img6.png'); }
+  25% { background-image: url('img/img7.png'); }
+  50% { background-image: url('img/img8.png'); }
+  75% { background-image: url('img/img9.png'); }
+  100% { background-image: url('img/img10.png'); }
 }
 
 /* Conteúdo principal */
