--- a/style.css
+++ b/style.css
@@ -111,6 +111,11 @@ main p {
   margin-bottom: 2rem;
 }
 
+.mensagem p {
+  margin: 0.8rem 0; /* ou ajuste para menos, tipo 0.5rem */
+  line-height: 1.6;
+}
+
 .botoes {
   display: flex;
   justify-content: center;
