--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ body {
 .intro {
   width: 100vw;
   height: 100vh;
-  background: url('background.jpg'); /* Substitua se tiver uma imagem específica */
+  background: url('background.png');
+  background-position: center;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,7 +30,7 @@ body {
 .faixa {
   width: 100vw;
   height: 120px;
-  background-color: #ffd700;
+  background-color: #d0aaff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,7 +42,7 @@ body {
 .iniciais {
   font-family: 'Great Vibes', cursive;
   font-size: 4rem;
-  color: #0d0d0d;
+  color: white;
   z-index: 11;
   cursor: pointer;
   transition: transform 1s ease, opacity 1s ease;
