--- a/style.css
+++ b/style.css
@@ -113,8 +113,8 @@ main p {
 }
 
 .mensagem p {
-  margin: 0.8rem 0; /* ou ajuste para menos, tipo 0.5rem */
-  line-height: 1.6;
+  margin: 0.2rem 0; /* ou ajuste para menos, tipo 0.5rem */
+  line-height: 1.1;
 }
 
 .botoes {
@@ -122,6 +122,7 @@ main p {
   justify-content: center;
   gap: 1rem;
   flex-wrap: wrap;
+  margin-top: 3rem;
 }
 
 .botao {
