--- a/style.css
+++ b/style.css
@@ -164,4 +164,7 @@ footer {
       body {
         overflow-y: auto;
       }
-    }
+     .intro {
+        background: url('celular.png');
+        background-position: center;
+      }
