--- a/style.css
+++ b/style.css
@@ -166,5 +166,5 @@ footer {
       }
      .intro {
         background: url('celular.png');
-        background-position: center;
+        background-position: top;
       }
