--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+body.bloqueado-scroll {
+  overflow: hidden;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   background-color: #0d0d0d;
